--- a/playbooks/generate_docs.yml
+++ b/playbooks/generate_docs.yml
@@ -4,15 +4,20 @@
   connection: local
   gather_facts: false
   vars:
-    output_directory: "./files/"
+    output_directory: "./files/working_docs/"
     source_directory: "./templates/"
+    doc_directory: "./files/pandoc_generated/"
+    reference: "./files/pandoc_reference/custom-reference.docx"
     templates_list:
-      - src: "{{ source_directory }}aap_operations_manual.j2"
-      - dest: "{{ output_directory }}aap_operations_manual.md"
-      - src: "{{ source_directory }}aap_platform_admin_guide.j2"
-      - dest: "{{ output_directory }}aap_platform_admin_guide.md"
-      - src: "{{ source_directory }}aap_policy_governance.j2"
-      - dest: "{{ output_directory }}aap_policy_governance.md"
+      - { src: "{{ source_directory }}aap_operations_manual.j2",
+        dest: "{{ output_directory }}aap_operations_manual.md",
+        doc: "{{ doc_directory }}aap_operations_manual.docx" }
+      - { src: "{{ source_directory }}aap_platform_admin_guide.j2",
+        dest: "{{ output_directory }}aap_platform_admin_guide.md",
+        doc: "{{ doc_directory }}aap_platform_admin_guide.docx" }
+      - { src: "{{ source_directory }}aap_policy_governance.j2",
+        dest: "{{ output_directory }}aap_policy_governance.md",
+        doc: "{{ doc_directory }}aap_policy_governance.docx" }
   tasks:
     - name: Load common variables
       include_vars: aap.yml
@@ -40,17 +45,16 @@
     - name: Render templates to Markdown files
       ansible.builtin.template:
         src: "{{ item.src }}"
-        dest: "{{ output_directory }}{{ item.dest }}"
+        dest: "{{ item.dest }}"
         mode: '0644'
       loop: "{{ templates_list }}"
       loop_control: {}
-      when:
-        - item.src | default('') != ''
-        - item.dest | default('') != ''
+      when: 
+        - item.dest | default('') | length > 0
 
     - name: Convert Markdown to DOCX
       ansible.builtin.command:
-        cmd: pandoc --toc "{{ item.dest }}" -o "{{ item.dest | replace('.md', '.docx') }}" --lua-filter=lua/pagebreak.lua --lua-filter=lua/codeblock.lua --reference-doc=files/pandoc_reference/custom-reference.docx
+        cmd: pandoc --toc "{{ item.dest }}" -o "{{ item.doc }}" --lua-filter=lua/pagebreak.lua --lua-filter=lua/codeblock.lua  --reference-doc="{{ reference }}"
       loop: "{{ templates_list }}"
       when: 
         - item.dest | default('') | length > 0
