--- a/playbooks/vars/global/aap.yml
+++ b/playbooks/vars/global/aap.yml
@@ -1,34 +1,39 @@
+# WIP I am Organizeing these by Domain and will be adding more as I go along. Variable names will be updated to reflect the domain they are in.
+
+# Organizational Information
 ORGANIZATION_NAME: "My Big Company"
 SUB_ORGANIZATION_NAME: "Server Engineering and Operations"
 SUB_ORG_OBJECTIVE_TITLE: "Strategic Roadmap"
-IDENTITY_MANAGEMENT_SYSTEM: "Active Directory, Okta"
-ORG_SDLC_ENVIRONMENTS:
-  - "Development"
-  - "Test"
-  - "Staging"
-  - "Production"
-AAP_REGISTRY_URL: "quay.io/internal-registry"
-AAP_RBAC_PROVIDER: "SailPoint"
-AAP_LOAD_BALANCER: "F5 Big-IP"
-AAP_INVENTORY_MANAGEMENT: "Red Hat Satellite, Ansible Inventory"
-AAP_CREDENTIAL_STORAGE: "CyberArk"
-AAP_JOB_EXECUTION_POLICY: "Restricted to approved job templates"
-AAP_COMPLIANCE_AUDIT_FREQUENCY: "Quarterly"
-AAP_LOWER_ENVIRONMENT: "main"  # Example: 'Development, Test'
-AAP_UPPER_ENVIRONMENT: "develop"  # Example: 'Staging, Production'
-AAP_CHANGE_MANAGEMENT_SYSTEM: "BMC Helix"  # Example: 'ServiceNow, BMC Helix'
-AAP_CODE_REPOSITORY: "Github"  # Example: 'GitLab, GitHub'
-AAP_CI_CD_SYSTEM: "Github Actions"  # Example: 'Jenkins, GitLab CI'
-AAP_CI_CD_PIPELINE: "Build, Test, Deploy"  # Example: 'Build, Test, Deploy'
 
-# Environment & Technical Constraints
-ENVIRONMENT_TYPE: "On-Prem"
+# SEO Leadership Defined  # SEO = Server Engineering and Operations
+## SEO Strategy
 MAIN_OBJECTIVES:
   - "Stabilize the Environment"
   - "Drive Process Efficiencies"
   - "Develop Talent"
   - "Deliver Emerging Technologies"
   - "Manage Cost"
+## SEO Metrics
+AAP_METRICS:
+  - "Automation Coverage (%)"
+  - "Change Lead Time"
+  - "Incident MTTR"
+  - "Configuration Drift (%)"
+# Additional Metrics to consider
+  - "Server Utilization (%)"
+  - "Server Uptime (%)"
+  - "Server Patch Compliance (%)"
+  - "Server Security Compliance (%)"
+  - "Server Configuration Compliance (%)"
+  - "Server Backup Success (%)"
+  - "Server Backup Retention (%)"
+  - "Server Backup Restoration (%)"
+  - "Server Backup Encryption (%)"
+
+# Operating Systems
+OS_FAMILIES:
+  - "Windows"
+  - "Linux"
 RHEL_VERSIONS:
   - 8
   - 9
@@ -36,6 +41,70 @@ WINDOWS_VERSIONS:
   - 2016
   - 2019
   - 2022
+# Unsupported OS
+## *nix
+  - "RHEL 7"
+  - "FreeBSD"
+  - "AIX"
+  - "Solaris"
+  - "Ubuntu"
+  - "CentOS"
+  - "Debian"
+  - "SUSE"
+  - "Oracle Linux"
+  - "Fedora"
+  - "AlmaLinux"
+  - "Rocky Linux"
+  - "Amazon Linux"
+# Windows
+  - "Windows 2012"
+  - "Windows 2012 R2"
+
+
+# Org/Enterprise Wide Processes/Standards
+ORG_SDLC_ENVIRONMENTS:
+  - "Development"
+  - "Test"
+  - "Staging"
+  - "Production"
+IDENTITY_MANAGEMENT_SYSTEM: "Okta"
+ENVIRONMENT_TYPE: "On-Prem"
+AAP_CHANGE_MANAGEMENT_SYSTEM: "BMC Helix"  # Example: 'ServiceNow, BMC Helix'
+AAP_CERTIFICATE_AUTHORITY: "Venafi"  # Example: 'DigiCert, Sectigo'
+
+# AAP Specific Variables
+## RBAC
+AAP_VP: "Joe Smith"
+AAP_SVP: "Jane Doe"
+AAP_LEAD_ENGINEER: "John Doe"
+AAP_ARCHITECT: "Jane Smith"
+AAP_ENGINEER: "John Smith"
+AAP_ROLE_DOMAINS:
+  - "Storage"
+  - "Network"
+  - "Network Security"
+  - "Server"
+  - "Virtualization"
+  - "App Dev"
+AAP_JOB_EXECUTION_POLICY: "Restricted to approved job templates"
+AAP_CREDENTIAL_STORAGE: "AAP (Future State: CyberArk)"
+AAP_COMPLIANCE_AUDIT_FREQUENCY: "Quarterly" # Confirm with SEO leadership
+
+
+AAP_REGISTRY_URL: "quay.io/internal-registry"
+AAP_RBAC_PROVIDER: "SailPoint"
+AAP_LOAD_BALANCER: "F5 Big-IP"
+AAP_INVENTORY_MANAGEMENT: "Red Hat Satellite, Ansible Inventory"
+AAP_LOWER_ENVIRONMENT: "develop"  # Example: 'Development, Test'
+AAP_UPPER_ENVIRONMENT: "main"  # Example: 'Staging, Production'
+AAP_CODE_REPOSITORY: "Github"  # Example: 'GitLab, GitHub'
+AAP_CI_CD_SYSTEM: "Github Actions"  # Example: 'Jenkins, GitLab CI'
+AAP_CI_CD_PIPELINE_STAGES:
+  - "Build"
+  - "Test"
+  - "Deploy"
+
+## AAP Control Plane
 AAP_PREFERRED_GALAXY_COLLECTIONS:
   - "ansible.windows"
   - "community.general"
@@ -49,8 +118,7 @@ AAP_VERSION: "2.5"
 SATELLITE_VERSION: "6.13"
 
 # Security & Compliance
-AAP_SECURITY_AND_COMPLIANCE:
-  - "SECU security standards"
+AAP_SECURITY_AND_COMPLIANCE: "CIS and general SECU security standards"
 AAP_INTEGRATION_POINTS:
   - "Splunk"
   - "BMC Helix"
@@ -79,24 +147,6 @@ AAP_IAM_TECH:
 AAP_SERVICE_MGMT_TECH:
   - "BMC Helix"
   - "Digital Workplace"
-AAP_CONTAINERIZATION_TECH:
-  - "Red Hat OpenShift"
-  - "Docker"
+AAP_CONTAINERIZATION_TECH: ["Red Hat OpenShift", "Docker"]
 AAP_APPLICATION_MGMT_TECH:
   - "Archer"
-
-# Metrics
-AAP_METRICS:
-  - "Automation Coverage (%)"
-  - "Change Lead Time"
-  - "Incident MTTR"
-  - "Configuration Drift (%)"
-
-# Team Roles by Domain
-AAP_ROLE_DOMAINS:
-  - "Storage"
-  - "Network"
-  - "Network Security"
-  - "Server"
-  - "Virtualization"
-  - "App Dev"
