--- a/playbooks/generate_docs.yml
+++ b/playbooks/generate_docs.yml
@@ -18,6 +18,9 @@
       - { src: "{{ source_directory }}aap_policy_governance.j2",
         dest: "{{ output_directory }}aap_policy_governance.md",
         doc: "{{ doc_directory }}aap_policy_governance.docx" }
+      - { src: "{{ source_directory }}aap_platform_runbook.md.j2",
+        dest: "{{ output_directory }}aap_platform_runbook.md",
+        doc: "{{ doc_directory }}aap_platform_runbook.docx" }
   tasks:
     - name: Load common variables
       include_vars: global/aap.yml
